editor/style.css
*
{
	margin: 0;
	padding: 0;
	border: 0;
}

html, body
{
	height: 100%;
}

body
{
	display: flex;
	flex-flow: column;
}

input, button, select
{
	color: #A8CEDA;
	background-color: #3C7386;
	padding: 5px 10px;
	border-radius: 3px;
}

input:disabled
{
	border: 2px solid #333333;
	background-color: #555555;
}

.good-button
{
	background-color: #439D62;
	color: #AEE5C0;
}

.clear
{
	clear: both;
}

#header
{
	flex: 0 0 50px;
	background-color: black;
	border-bottom: 1px solid #495692;
	padding-left: 160px;
	vertical-align: middle;
	line-height: 50px;
}

.header-block
{
	display: inline-block;
	margin-right: 20px;
}

#logo
{
	height: 40px;
	position: absolute;
	left: 5px;
	top: 5px;
}

.header-ui-element
{
	height: 30px;
	margin-right: 5px;
}

.header-button
{
	width: 75px;
}

#filelist
{
	width: 200px;
}

#main-container
{
	flex: 1 1 auto;

	display: flex;
	flex-flow: row;
	align-items: stretch;
}

#editor
{
	flex: 0 0 66%;

	border-right: 2px solid #495692;
	width: 0px;
}

#manual
{
	background-color: #111111;
	
	flex: 1 1 auto;

	padding: 5px;
	max-height: 100%;
	overflow: auto;
}

#footer
{
	height: 20px;
	line-height: 20px;
	vertical-align: middle;

	background-color: #DDDDDD;
}

